# hide

./: README.md  pyproject.toml
src/hide/: __init__.py  cli.py  lsb.py
tests/: test_lsb.py
